[FIX] - Big Title buttons alignment depending on the header widget area and screen width. If there is enough space, the buttons are side by side. If there isn't the buttons are one above each other.

--- a/assets/sass/3_sections/_big-title.scss
+++ b/assets/sass/3_sections/_big-title.scss
@@ -51,12 +51,25 @@
       .btn-right:hover {
         opacity: 0.75;
       }
+    }
 
+    .big-title-slider-content .buttons {
       .btn,
       .btn-right {
+        display: inline-block;
         margin: 15px;
       }
     }
 
+    .big-title-slider-content.text-left .buttons {
+      .btn {
+        margin-left: auto;
+      }
+    }
+    .big-title-slider-content.text-right .buttons {
+      .btn {
+        margin-right: auto;
+      }
+    }
   }
 }
